update homepage name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kellycuevas.github.io/ampcontrol-technical/",
+  "homepage": "https://kellycuevas.github.io/trip-compare/",
   "name": "ampcontrol-technical",
   "private": true,
   "version": "0.0.0",
